--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.4.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "styled-elements": "^1.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
